// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactForm when creating a new contact should render the form 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="contact-form"
  >
    <fieldset
      class="sc-AxhCb ckQmOL flex flex-col space-y-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="name"
      >
        Name
      </label>
      <input
        class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
        data-testid="contact-form__name-input"
        name="name"
        value=""
      />
    </fieldset>
    <fieldset
      class="sc-AxhCb ckQmOL flex flex-col space-y-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="network"
      >
        Network
      </label>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-4-label"
        class="relative"
        role="combobox"
      >
        <label
          for="downshift-4-input"
          id="downshift-4-label"
        />
        <div
          class="relative flex items-center w-full flex-inline"
        >
          <div
            class="flex w-full border rounded transition-colors duration-200 shadow-sm bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
          >
            <div
              class="px-4 py-2 flex-0 w-14"
            >
              <div
                class="sc-AxiKw cxOZEi border-theme-neutral-200"
              />
            </div>
            <div
              class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
            >
              <div
                class="relative z-10 w-full"
                data-testid="select-network__typeahead-"
              >
                <div
                  class="absolute left-0 font-semibold top-2 text-theme-neutral-400"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-labelledby="downshift-4-label"
                autocomplete="off"
                class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                data-testid="select-asset__input"
                id="downshift-4-input"
                placeholder="Enter a network name"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-AxhCb ckQmOL flex flex-col space-y-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="address"
      >
        Address
      </label>
      <input
        class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
        data-testid="contact-form__address-input"
        name="address"
      />
    </fieldset>
    <div
      class="mt-4"
    >
      <button
        class="sc-AxirZ fhzkRl w-full"
        color="primary"
        data-testid="contact-form__add-address-btn"
        disabled=""
        type="button"
      >
        Add address
      </button>
    </div>
    <div
      class="flex w-full justify-end"
    >
      <div
        class="space-x-3"
      >
        <button
          class="sc-AxirZ fhzkRl"
          color="primary"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          Cancel
        </button>
        <button
          class="sc-AxirZ dPtiuf"
          color="primary"
          data-testid="contact-form__save-btn"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ContactForm when editing an existing contact should render the form 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="contact-form"
  >
    <fieldset
      class="sc-AxhCb ckQmOL flex flex-col space-y-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="name"
      >
        Name
      </label>
      <input
        class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
        data-testid="contact-form__name-input"
        name="name"
        value="OLEBank"
      />
    </fieldset>
    <fieldset
      class="sc-AxhCb ckQmOL flex flex-col space-y-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="network"
      >
        Network
      </label>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-5-label"
        class="relative"
        role="combobox"
      >
        <label
          for="downshift-5-input"
          id="downshift-5-label"
        />
        <div
          class="relative flex items-center w-full flex-inline"
        >
          <div
            class="flex w-full border rounded transition-colors duration-200 shadow-sm bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
          >
            <div
              class="px-4 py-2 flex-0 w-14"
            >
              <div
                class="sc-AxiKw cxOZEi border-theme-neutral-200"
              />
            </div>
            <div
              class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
            >
              <div
                class="relative z-10 w-full"
                data-testid="select-network__typeahead-"
              >
                <div
                  class="absolute left-0 font-semibold top-2 text-theme-neutral-400"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-labelledby="downshift-5-label"
                autocomplete="off"
                class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                data-testid="select-asset__input"
                id="downshift-5-input"
                placeholder="Enter a network name"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-AxhCb ckQmOL flex flex-col space-y-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="address"
      >
        Address
      </label>
      <input
        class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
        data-testid="contact-form__address-input"
        name="address"
      />
    </fieldset>
    <div
      class="mt-4"
    >
      <button
        class="sc-AxirZ fhzkRl w-full"
        color="primary"
        data-testid="contact-form__add-address-btn"
        disabled=""
        type="button"
      >
        Add address
      </button>
    </div>
    <div
      class="group"
    >
      <span
        class="inline-block text-sm font-semibold transition-colors duration-100 group-hover:text-theme-primary text-theme-neutral-dark"
      >
        Addresses
      </span>
      <div
        data-testid="contact-form__address-list"
      >
        <div
          class="flex items-center py-4 border-b border-dashed border-theme-neutral-300"
          data-testid="contact-form__address-list-item"
        >
          <div
            class="mr-4"
          >
            <div
              class="flex items-center -space-x-1"
            >
              <div
                class="sc-AxiKw eHzXqc -mr-1 undefined"
              >
                <div
                  class="sc-AxhUy cPXLjK"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            class="font-semibold"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                ASuusXSW9k…P6T9GQ3kqT
              </span>
            </div>
          </span>
          <button
            class="sc-AxirZ ggAYoh flex items-center ml-auto"
            color="primary"
            data-testid="contact-form__remove-address-btn"
            type="button"
          >
            <div
              class="sc-AxhUy cPXLjK"
              height="1em"
              width="1em"
            >
              <svg>
                trash.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex items-center py-4 border-b border-dashed border-theme-neutral-300"
          data-testid="contact-form__address-list-item"
        >
          <div
            class="mr-4"
          >
            <div
              class="flex items-center -space-x-1"
            >
              <div
                class="sc-AxiKw eHzXqc -mr-1 undefined"
              >
                <div
                  class="sc-AxhUy cPXLjK"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="15pyr1HRAxpq3x64duXav1csmyCtXXu9G8"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"40\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(103, 58, 183)\\"/></svg>"
                    title="15pyr1HRAxpq3x64duXav1csmyCtXXu9G8"
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            class="font-semibold"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                15pyr1HRAx…myCtXXu9G8
              </span>
            </div>
          </span>
          <button
            class="sc-AxirZ ggAYoh flex items-center ml-auto"
            color="primary"
            data-testid="contact-form__remove-address-btn"
            type="button"
          >
            <div
              class="sc-AxhUy cPXLjK"
              height="1em"
              width="1em"
            >
              <svg>
                trash.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex items-center py-4 border-b border-dashed border-theme-neutral-300"
          data-testid="contact-form__address-list-item"
        >
          <div
            class="mr-4"
          >
            <div
              class="flex items-center -space-x-1"
            >
              <div
                class="sc-AxiKw eHzXqc -mr-1 undefined"
              >
                <div
                  class="sc-AxhUy cPXLjK"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    eth.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full overflow-hidden rounded-full"
                >
                  <img
                    alt="0x5e8f7a63e31c759ef0ad5e71594e838b380d7c33"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="0x5e8f7a63e31c759ef0ad5e71594e838b380d7c33"
                  />
                </div>
              </div>
            </div>
          </div>
          <span
            class="font-semibold"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                0x5e8f7a63…8b380d7c33
              </span>
            </div>
          </span>
          <button
            class="sc-AxirZ ggAYoh flex items-center ml-auto"
            color="primary"
            data-testid="contact-form__remove-address-btn"
            type="button"
          >
            <div
              class="sc-AxhUy cPXLjK"
              height="1em"
              width="1em"
            >
              <svg>
                trash.svg
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex w-full justify-between"
    >
      <button
        class="sc-AxirZ nDNwi"
        color="danger"
        data-testid="contact-form__delete-btn"
        type="button"
      >
        <div
          class="sc-AxhUy cPXLjK"
          height="1em"
          width="1em"
        >
          <svg>
            trash.svg
          </svg>
        </div>
        <span>
          Delete Contact
        </span>
      </button>
      <div
        class="space-x-3"
      >
        <button
          class="sc-AxirZ fhzkRl"
          color="primary"
          data-testid="contact-form__cancel-btn"
          type="button"
        >
          Cancel
        </button>
        <button
          class="sc-AxirZ dPtiuf"
          color="primary"
          data-testid="contact-form__save-btn"
          type="submit"
        >
          Save
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
